# palmira

./: CMakeLists.txt  DOMini.hpp  README.md  contents-index.hpp  exceptions.hpp  lang-api.hpp  plugins.hpp  reports.hpp  server.hpp  service.hpp  span.hpp  statusReport.hpp  text-api.hpp  toolset.hpp  watchFs.hpp
api/: contents-index.hxx  dynamic-contents.hxx  exceptions.hxx  index.hxx  layered-contents.hxx  span.hxx  static-contents.hxx  storage-filesystem.hxx
context/: contents-processor.hpp  decomposer.hpp  index-keys.hpp  index-type.hpp  make-image.hpp
grpcapi/: client.hpp  server.hpp
grpcttp/: CMakeLists.txt  client.hpp  messages.hpp  server.hpp
grpcttp/cmake/: grpc.cmake
grpcttp/src/: client.cpp  messages.cpp  messages.hpp  server.cpp
indices/: dynamic-contents.hpp  layered-contents.hpp  static-contents.hpp
network/: grpc-client.hpp  grpc-server.hpp  http-client.hpp  http-server.hpp
plugins/morpho-ru/: CMakeLists.txt  morpho-ru.cpp
plugins/morpho-ru/tests/: test-morpho-ru.cpp
plugins/stemka-ru/: CMakeLists.txt
plugins/stemka-ru/src/: stemming-rus.cpp
plugins/stemka-ru/tests/: CMakeLists.txt  test-stemka-ru.cpp
plugins/stemka-ua/: CMakeLists.txt
plugins/stemka-ua/src/: language-api.cpp  stemming-ukr.cpp
plugins/stemka-ua/tests/: CMakeLists.txt  test-stemka-ua.cpp
query/: key.hpp
readers/: load-xml-text.hpp  read-xml.hpp  read-zip.hpp
remoapi/: CMakeLists.txt  client.hpp  server.hpp
remoapi/src/: client.cpp  jsload.cpp  loader.hpp  server.cpp  unpack.cpp  unpack.hpp  zmload.cpp
service/: CMakeLists.txt  delphi-search.cpp  delphi-search.hpp  object-zmap.hpp  structo-search.hpp  z-arguments.cpp  z-arguments.hpp
src/: CMakeLists.txt  k2.cpp  netServer.cpp  netServer.hpp  palmira.cpp  z-arguments.cpp
src/context/: decomposer.cpp  index-keys.cpp  make-image.cpp
src/index/: commit-contents-index.cxx  commit-contents-index.hxx  commit-contents.cxx  commit-contents.hxx  contents-index-fusion.hxx  contents-index.cxx  dynamic-banlist.hxx  dynamic-bitmap.hxx  dynamic-chains-ringbuffer.hxx  dynamic-chains.hxx  dynamic-contents-index.cxx  dynamic-contents.cxx  dynamic-entities.hxx  flaked-contents-index.cxx  flaked-contents.cxx  index-flakes.cxx  index-flakes.hxx  index-layers.cxx  index-layers.hxx  layered-contents.cxx  merge-indices.cxx  merger-contents.cxx  override-entities.cxx  override-entities.hxx  patch-table.hxx  static-contents-index.cxx  static-contents.cxx  static-entities.hxx
src/indexes/: commit-contents.cxx  contents-index-fusion.cxx  contents-index.cxx  dynamic-bitmap.hxx  dynamic-contents.cxx  dynamic-entities.hxx  index-layers.cxx  index-layers.hxx  layered-contents.cxx  merger-contents.cxx  merger-contents.hxx  notify-events.hxx  patch-table.hxx  static-contents.cxx  static-entities.hxx
src/letters/: letters.hpp
src/network/grpc/: client.cpp  messages.cpp  messages.hpp  server.cpp
src/network/grpc/proto/: grpcttp.proto
src/network/http/: client.cpp  jsload.cpp  loader.hpp  server.cpp  unpack.cpp  unpack.hpp  zmload.cpp
src/objects/: doc-zmap.cpp  read-zip.cpp
src/readers/: load-xml-text.cpp  read-xml.cpp  read-zip.cpp
src/remoapi/: client.cpp  zmload.cpp
src/service/: collect-docs.cpp  collect-quotes.cpp  collect-quotes.hpp  collect.hpp  delphi-search.cpp  structo-create.cpp  structo-search.cpp
src/storage/: filesystem-output.cxx  filesystem-policies.cxx  filesystem-serial.cxx  filesystem-storage.cxx  posix-fs-output.cpp  posix-fs-policies.cpp  posix-fs-serial.cpp  posix-fs-storage.cpp
src/tests/: CMakeLists.txt
src/tests/index/: test-commit-contents.cxx  test-dynamic-chains.cxx  test-dynamic-contents.cxx  test-dynamic-entities.cxx  test-index-flakes.cxx  test-index-layers.cxx  test-layered-contents.cxx  test-patch-table.cxx  test-static-contents.cxx  test-static-entities.cxx  test-stream-indexing.cxx
src/tests/indexes/: test-dynamic-contents.cxx  test-dynamic-entities.cxx
src/tests/letters/: test-letters.cpp
src/tests/storage/: test-storage-fs-based.cxx
src/texts/: dump-as-json.cpp  dump-as-tags.cpp  load-as-json.cpp  load-as-tags.cpp  text-2-image.hpp  text-to-toks.hpp
src/tinyxml/: load-xml-text.cpp
src/tools/: primes.cxx  primes.hxx
src/toolset/: object-zmap.hpp  plugins.cpp  toolset.cpp  z-arguments.cpp
src/utils/: CMakeLists.txt  merge-indices.cxx
src/watchFs/: watchFs-nix.cpp
storage/: posix-fs.hpp
tests/: CMakeLists.txt
tests/context/: test-contents-processor.cpp  test-contents.cpp  test-key.cpp
tests/indexes/: test-commit-contents.cpp  test-dynamic-chains-ringbuffer.cpp  test-dynamic-chains.cpp  test-dynamic-contents.cpp  test-dynamic-entities.cpp  test-index-layers.cpp  test-layered-contents.cpp  test-patch-table.cpp  test-static-contents.cpp  test-static-entities.cpp  test-stream-indexing.cpp
tests/query/: test-key.cpp
tests/readers/: test-tinyxml.cpp  test-zipfile.cpp
tests/storage/: test-storage-fs-based.cpp
tests/texts/: test-letters.cpp
tests/tinyxml/: test-tinyxml.cpp
texts/: DOM-body.hpp  DOM-dump.hpp  DOM-load.hpp  DOM-sink.hpp  DOM-text.hpp  dissection.hpp
tinyxml/: load-xml-text.hpp
utils/: CMakeLists.txt
utils/k2-local/: CMakeLists.txt  config.json  k2.1.html  k2.2.html  k2.base.html  k2.cpp  watch-fs-win.cpp  watch-fs.cpp  watch-fs.hpp
utils/k2-local/tests/: CMakeLists.txt  test-watch-fs.cpp  tmppath.h
utils/libruseq/: chunked-client.cpp  libruseq.json  local-indexer.cpp  search.cpp  send-1.cpp  sender.cpp
www/: search.html
